<resources>
    <string name="app_name">PhotoStream</string>
    <string name="contact_us">github.com/team-sigma/photostream</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="imgFlotsam_desc">image form the web</string>

    <string name="wait_for_popup">Image is loading, please wait.</string>
    <string name="drawer_add_stream">Add…</string>
    <string name="drawer_streams">Streams</string>
    <string name="title_activity_global_settings">Settings</string>

    <string name="error_name_taken">Sorry! The name "%s" has been taken!</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="drawer_settings_title">Settings</string>
    <string name="lblWhatKind_text">What kind of stream?</string>
    <string name="btnNewStream_text">Create Stream</string>
    <string name="cat_general">General</string>
    <string name="set_batch_size">Batch Size</string>
    <string name="set_do_geocode">Enable Geocode</string>
    <string name="set_search_radius">Search Radius</string>
    <string name="cat_query">Query</string>
    <string name="lbl_preview">Preview</string>
    <string name="from_user">From User</string>
    <string name="from_list">From List</string>
    <string name="question">Question</string>
    <string name="lbl_since_date">Since Date:</string>
    <string name="lbl_until_date">Until Date:</string>
    <string name="enable">Enable</string>
    <string name="change">Change</string>
    <string name="stream_name">Stream Name</string>
    <string name="attitude">Attitude</string>
    <string name="exact_phrases">Phrases</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove Phrases</string>
    <string name="hashtags">Hashtags</string>
    <string-array name="twitter_attitude_vals">
        <item>None</item>
        <item>Positive</item>
        <item>Negative</item>
    </string-array>

    <string name="action_done">Done</string>
    <string name="action_cancel">Cancel</string>
    <string name="pref_title_default_stream">Default Stream</string>
    <string name="pref_desc_default_stream">Select the stream that will open on startup</string>
    <string name="pref_title_nuke_db">Nuke the Database</string>
    <string name="pref_desc_nuke_db">Deletes all streams and queries in the database</string>
</resources>
