<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:scrollIndicators="right"
              style="@style/AppTheme">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cat_general"
        android:id="@+id/lblGeneral"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtStreamName"
        android:hint="@string/stream_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/numTweetBatchSize"
        android:editable="true"
        android:enabled="true"
        android:numeric="integer"
        android:hint="@string/set_batch_size"
        android:elegantTextHeight="true"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_do_geocode"
        android:id="@+id/chkDoGeocode"
        android:enabled="true"
        android:elegantTextHeight="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/numRadius"
        android:numeric="integer"
        android:hint="@string/set_search_radius"
        android:editable="true"
        android:elegantTextHeight="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cat_query"
        android:id="@+id/lblQuery"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_preview"
        android:id="@+id/lblPreview"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtFromUser"
        android:editable="true"
        android:elegantTextHeight="true"
        android:hint="@string/from_user"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtFromList"
        android:editable="true"
        android:elegantTextHeight="true"
        android:hint="@string/from_list"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:id="@+id/chkQuestion"
        android:elegantTextHeight="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_since_date"
        android:id="@+id/lblSinceDate"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable"
            android:id="@+id/chkEnableSinceDate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/lblSinceDatePre"
            android:visibility="invisible"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:id="@+id/btnSinceDateChange"
            android:visibility="invisible"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_until_date"
        android:id="@+id/lblUntilDate"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable"
            android:id="@+id/chkEnableUntilDate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/lblUntilDatePre"
            android:visibility="invisible"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:id="@+id/btnUntilDateChange"
            android:visibility="invisible"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attitude"
        android:id="@+id/lblAttitude"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="10dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnAttitude"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exact_phrases"
        android:id="@+id/lblExactPhrases"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEditExactPhrases"
        android:text="@string/edit"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        android:id="@+id/lblRemove"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEditRemove"
        android:text="@string/edit"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hashtags"
        android:id="@+id/lblHashtags"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEditHashtags"
        android:text="@string/edit"/>

</LinearLayout>